package FactoryUsuarios;

public interface Usuario {
    String getNombre();
    String getTipo();


    void mostrarPermisos();
}